# secp256k1-CMake-example

./: .gitignore  CMakeLists.txt  README.md
src/: random.h
